k8s/smarthome/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: app
          image: app:latest
          imagePullPolicy: Always
          ports: []
          volumeMounts:
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: persistence
          hostPath:
            path: /config
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
