k8s/smarthome/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: appname
  type: ClusterIP
  ports: []
