k8s/smarthome/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appname.k8s.javydekoning.com
      #secretName: javydekoning-com-tls
  rules:
    - host: appname.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appname-service
                port:
                  name: http
